# personal-dashboard

./: Cargo.toml
src/: main.rs
templates/: #dashboard.js#  #index.html#  .#dashboard.js  dashboard.js  index.html  styles.css
