[package]
name = "personal-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.0"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower = "0.5.2"
chrono = "0.4.42"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
